aml-parser/src/snapshots/aml_parser__parser__tests__parser.snap
---
source: aml-parser/src/parser.rs
expression: ast
---
nodes:
  - Text:
      value:
        String:
          value:
            start_byte: 5
            end_byte: 12
          text: "\"Hello\""
      attributes: []
      children:
        - Span:
            value:
              String:
                value:
                  start_byte: 22
                  end_byte: 29
                text: "\"World\""
            attributes: []
            location:
              start_byte: 17
              end_byte: 21
            text: span
      location:
        start_byte: 0
        end_byte: 4
      text: text
variables: {}
scopes:
  - variables: []
    parent: ~
  - variables: []
    parent: 0
